# tree-sitter-kpl

./: CMakeLists.txt  Cargo.toml  Justfile  LICENSE  Makefile  Package.swift  README.md  binding.gyp  example.k  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-kpl.pc.in
bindings/c/tree_sitter/: tree-sitter-kpl.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kpl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKplTests/: TreeSitterKplTests.swift
src/: grammar.json  node-types.json  parser.c
